--- a/mieszkancy.css
+++ b/mieszkancy.css
@@ -16,7 +16,7 @@ background-color: silver;
 
 #panel_mieszkanca
 {
-width: 540px;
+width: 50%;
 height: 100%;
 background-color: gray;
 float: left;
@@ -30,3 +30,9 @@ height: 300px;
 {
 font-size: 20px;	
 }
+#numer_pokoju
+{
+font-size: 30px;
+width: 100%;
+height: 100px;	
+float: left;
