--- a/admin.css
+++ b/admin.css
@@ -1,9 +1,61 @@
+body
+{
+text-align: center;
+font-size: 20px;
+font-weight: bold;
+overflow-y:hidden;	
+background-image: url(admin.jpg);
+}
+
+ a
+{
+	color: white;
+	text-decoration: none
+}
+#panel
+{
+	width: 1000px;
+	margin: auto;
+}
+#panele
+{
+	margin: auto;
+}
+
 #przycisk
 {
-	height: 200px;
-	width: 200px;
+	height: 250px;
+	width: 400px;
 	background-color: orange;
 	margin: 10px;
 	float: left;
+	border-top-left-radius: 60px;
 }
-
+#przycisk2
+{
+	height: 250px;
+	width: 400px;
+	background-color: yellow;
+	margin: 10px;
+	float: left;
+	border-top-right-radius: 60px;
+	
+}
+#przycisk3
+{
+	height: 250px;
+	width: 400px;
+	background-color: blue;
+	margin: 10px;
+	float: left;
+	border-bottom-left-radius: 60px;
+}
+#przycisk4
+{
+	height: 250px;
+	width: 400px;
+	background-color: green;
+	margin: 10px;
+	float: left;
+	border-bottom-right-radius: 60px;
+}
