--- a/admin.css
+++ b/admin.css
@@ -1,7 +1,7 @@
 body
 {
 text-align: center;
-font-size: 20px;
+font-size: 30px;
 font-weight: bold;
 overflow-y:hidden;	
 background-image: url(admin.jpg);
@@ -23,49 +23,66 @@ text-shadow: 5px 5px 10px black;
 #panel
 {
 	margin-top: 50px;
- margin-left: 120px;
+margin-left: 8%;
 }
-#panele
-{
-	margin: auto;
-}
+
 
 #przycisk
 {
-	height: 450px;
+	height: 460px;
 	width: 250px;
 	background-color: orange;
 	margin: 10px;
 	float: left;
 	box-shadow: 5px 5px 10px black;
+	background-image: url(admin1.png);
 
 
 }
 #przycisk2
 {
 	height: 450px;
-	width: 250px;
+	width: 260px;
 	background-color: orange;
 	margin: 10px;
 	float: left;
 	box-shadow: 5px 5px 10px black;
+	background-image: url(admin2.png);
 
 }
 #przycisk3
 {
 	height: 450px;
-	width: 250px;
+	width: 260px;
 	background-color: orange;
 	margin: 10px;
 	float: left;
 	box-shadow: 5px 5px 10px black;
+	background-image: url(admin3.png);
 }
 #przycisk4
 {
-	height: 450px;
+	height: 460px;
 	width: 250px;
 	background-color: orange;
 	margin: 10px;
 	float: left;
 	box-shadow: 5px 5px 10px black;
+	background-image: url(admin4.png);
+}
+#przycisk:hover 
+{
+	background-color: #800000;
+}
+#przycisk2:hover 
+{
+	background-color: #800000;
+}
+#przycisk3:hover 
+{
+	background-color: #800000;
+}
+#przycisk4:hover 
+{
+	background-color: #800000;
 }
