--- a/wyszukaj.css
+++ b/wyszukaj.css
@@ -1,3 +1,17 @@
+body
+{
+	overflow-y:hidden;	
+	background-image: url(tlo_wyszukaj.png);
+}
+#strona
+{
+	 text-align: center;
+	 color: #ffffff;
+	 font-size: 20px;
+	 font-weight: bold;
+	 font-family: 'Lato', sans-serif;
+	 text-shadow: 5px 5px 10px black;	
+}
 #gora
 {
 	height: 50%;
@@ -18,7 +32,7 @@
 	width: 250px;
 	background-color: green;
 	float: left;
-	margin: 30px;
+	margin: 30px; 
 }
 
 #bloki
@@ -27,6 +41,7 @@
 	width: 1000px;
 	background-color: yellow;
 	float: left;
+	margin-left: 17%;
 }
 
 #wyszukaj
@@ -35,5 +50,5 @@
 	width: 700px;
 	background-color: red;
 	float: left;
-	margin: 30px;
+	margin: 30px; 
 }
