--- a/wyszukaj.css
+++ b/wyszukaj.css
@@ -16,7 +16,9 @@ body
 {
 	height: 50%;
 	width: 100%;
-	background-color: orange;
+/*	background-color: orange; */
+float: left;
+ border-bottom-style: dotted;
 }
 
 #dol
@@ -24,13 +26,14 @@ body
 	height: 50%;
 	width: 100%;
 	background-color: green;
+	float: left;
 }
 
 #blok
 {
 	height: 250px;
 	width: 250px;
-	background-color: green;
+/*	background-color: green; */
 	float: left;
 	margin: 30px; 
 }
@@ -39,16 +42,33 @@ body
 {
 	height: 300px;
 	width: 1000px;
-	background-color: yellow;
+/*	background-color: yellow; */
 	float: left;
 	margin-left: 17%;
 }
 
 #wyszukaj
 {
-	height: 150px;
+	height: 100px;
 	width: 700px;
 	background-color: red;
 	float: left;
 	margin: 30px; 
+	margin-left: 24%;
+	box-shadow: 5px 5px 10px black;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+#lupa
+{
+	height: 70px;
+	width: 70px;
+	background-color: #ffffff;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	margin-top: 12px;
 }
