--- a/wyszukaj.css
+++ b/wyszukaj.css
@@ -14,7 +14,7 @@ body
 }
 #gora
 {
-	height: 50%;
+	height: 350px;
 	width: 100%;
 /*	background-color: orange; */
 float: left;
@@ -25,7 +25,7 @@ float: left;
 {
 	height: 50%;
 	width: 100%;
-	background-color: green;
+/*	background-color: green; */
 	float: left;
 }
 
@@ -44,7 +44,8 @@ float: left;
 	width: 1000px;
 /*	background-color: yellow; */
 	float: left;
-	margin-left: 17%;
+	margin-left: 10%;
+	
 }
 
 #wyszukaj
@@ -54,7 +55,7 @@ float: left;
 	background-color: red;
 	float: left;
 	margin: 30px; 
-	margin-left: 24%;
+	margin-left: 16%;
 	box-shadow: 5px 5px 10px black;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -65,10 +66,37 @@ float: left;
 {
 	height: 70px;
 	width: 70px;
-	background-color: #ffffff;
+	background-color: #7c7286;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 	margin-top: 12px;
+	margin-left: 20px;
+	float: left;
+}
+#szukaj_pasek
+{
+	float: left;
+}
+
+input
+{
+height: 60px;
+width: 450px;
+border-top-left-radius: 5px;
+border-top-right-radius: 5px;
+border-bottom-right-radius: 5px;
+border-bottom-left-radius: 5px;
+margin-top: 20px;
+margin-left: 60px;
+}
+#lo
+{
+	/*background-color: black;
+	opacity: 0.8;
+	*/
+	height: 2000px;
+	width: 80%;
+	margin: auto;
 }
