--- a/ekran_blokady.css
+++ b/ekran_blokady.css
@@ -1,32 +1,74 @@
 body
 {
 	font-weight: bold;
+	font-weight: bold;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'Lato', sans-serif;
+	text-align: center;
+	text-shadow: 10px 10px 10px black;
+	overflow-y:hidden;
+	background-image: url(tlo3.jpg);
 }
 
 #kontener_glowny
 {
-	background-color: #228B22;
+/*	background-color: #228B22; */
 	height: 70px;
-	width: 400px;
+	width: 100%;
 }
 
 #kontener1
 {
-	background-color: green;
-	height: 70px;
-	width: 400px;
+/*	background-color: green; */
+	height: 120px;
+	width: 100%;
 }
 
 #kontener2
 {
-	background-color: blue;
-	height: 70px;
-	width: 400px;
+/*	background-color: blue; */
+	height: 400px;
+	width: 100%;
+}
+
+#wkontener2
+{
+/*	background-color: silver; */
+	height: 400px;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	color: white;
+	font-size: 40px;
+    -webkit-text-stroke: 2px #000000;
+
 }
 
 #kontener3
 {
-	background-color: orange;
-	height: 70px;
-	width: 400px;
+/*	background-color: orange; */
+	height: 80px;
+	width: 100%;
+	text-align: left;
+}
+
+#obrazek
+{
+	background-image: url(user.png);
+	background-color: black;
+	height: 200px;
+	width:200px;
+	border-top-left-radius: 100px;
+	border-top-right-radius: 100px;
+	border-bottom-right-radius: 100px;
+	border-bottom-left-radius: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 2px;
+}
+
+.input
+{
+	margin-top: 20px;
 }
