--- a/ekran_blokady.css
+++ b/ekran_blokady.css
@@ -58,7 +58,7 @@ body
 
 #obrazek
 {
-	background-image: url(user.png);
+	background-image: url(user2.jpg);
 	background-color: black;
 	height: 200px;
 	width:200px;
@@ -77,6 +77,13 @@ body
 	height: 100%;
 	width: 420px;
 	background-color: black;
+}
+ a
+{
+	color: white;
+	text-decoration: none;
+	-webkit-text-stroke: 2px #000000;
+	
 }
 #pin
 {
