--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ input[type=submit]
 	letter-spacing: 2px;
 	outline: none;
 }
+input[type=submit]:focus
+{
+	-webkit-box-shadow: 0px 0px 15px 5px rgba(204,204,204,0.9);
+	-moz-box-shadow: 0px 0px 15px 5px rgba(204,204,204,0.9);
+	box-shadow: 0px 0px 15px 5px rgba(204,204,204,0.9);
+}
