--- a/wyszukaj.css
+++ b/wyszukaj.css
@@ -99,3 +99,10 @@ input
 	margin-left: auto;
 	margin-right: auto;
 }
+#wyloguj
+{
+	height: 20px;
+	width: 300px;
+	color: gold;
+	background-color: black;
+}
