--- a/style_mieszkaniec.css
+++ b/style_mieszkaniec.css
@@ -83,3 +83,11 @@ color: green;
 font-size: 40px;
 color: red;	
 }
+#cofaj
+{
+	height:50px;	
+	width: 120px;
+	background-color: orange;
+	float: left;
+	font-size: 20px;
+}
