--- a/wyszukaj.css
+++ b/wyszukaj.css
@@ -1,7 +1,7 @@
 body
 {
 	overflow-y:hidden;	
-	background-image: url(tlo.jpg);
+	background-image: url(tlo3.jpg);
 	
 }
 #strona
@@ -21,7 +21,7 @@ body
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px; 
-	background-color: #B22222;
+	background-color: #2F4F2F;
 	box-shadow: 5px 5px 10px black;
 	
 }
@@ -91,6 +91,15 @@ input
 	border-radius: 5px;
 	margin-top: 20px;
 	margin-left: 60px;
+	font-size: 28px;
+	font-weight: bold;
+	color: grey;
+}
+button
+
+{
+	height: 70px;
+	width: 70px;
 }
 #lo
 {
@@ -101,8 +110,8 @@ input
 }
 #wyloguj
 {
-	height: 20px;
-	width: 300px;
-	color: gold;
-	background-color: black;
+text-align: right;
+margin-right: 30px;
+
+font-weight: bold;
 }
